@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.10-dev
 
+Support continuous configuration line when parsing the inherited
+configuration file [Stas]
+
 Since some of the inherited from the global httpd.conf modules require
 mod_perl to be loaded first, orrange for that to happen. [Stas]
 
